k8s/guardians/monitoring/prometheus/ingressRoute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-operator-prometheus-http
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus-operator-prometheus
    app.kubernetes.io/instance: prometheus-operator
spec:
  entrypoints:
    - http
  routes:
    - match: Host(`prometheus.metrics.hannahs.family`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: default
      services:
        - name: prometheus-operator-prometheus
          port: 9090

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-operator-prometheus-https
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus-operator-prometheus
    app.kubernetes.io/instance: prometheus-operator
spec:
  entrypoints:
    - https
  routes:
    - match: Host(`prometheus.metrics.hannahs.family`)
      kind: Rule
      services:
        - name: prometheus-operator-prometheus
          port: 9090
  tls:
    certResolver: default
